# OStore

./: CMakeLists.txt  main.c  reinitializeDatabase.c
automation_script/commands/: launchCustomers.command  launchServer.command  launchShops.command
automation_script/runnables/: launchCustomers.sh  launchServer.sh  launchShops.sh  test_script.sh
clients/customer/: Customer.c  Customer.h
clients/shop/: Shop.c  Shop.h
communication_protocol/: CommunicationProtocol.c  CommunicationProtocol.h  ConnectionHandler.c  ConnectionHandler.h
data/item/: Item.c  Item.h
data/store/: store.c  store.h
data_structures/hashtable/: HashTable.c  HashTable.h  RequestManaging_HashTable.c  RequestManaging_HashTable.h  Store_HashTable.c  Store_HashTable.h
data_structures/queues/: ConnectionQueue.c  ConnectionQueue.h
server/: Server.c  Server.h
tests/: TestClient.c  TestServer.c  Tests.c  Tests.h
tests/client_server_tests/: TestClient.c  TestServer.c
util/: Common_Libraries.h
util/common_error_handling/: Memory_Error_Handler.c  Memory_Error_Handler.h
util/general_utilities/: GeneralUtilities.c  GeneralUtilities.h
util/sqlite3/: Items.db  Sqlite3_Manager.c  Sqlite3_Manager.h  sqlite3.h
util/string_manipulation/: StringManipulator.c  StringManipulator.h
