cmake_minimum_required(VERSION 3.14)
project(OStore C)

set(CMAKE_C_STANDARD 99)

add_executable(Shop clients/shop/Shop.c clients/shop/Shop.h util/sqlite3/Sqlite3_Manager.c util/sqlite3/Sqlite3_Manager.h data/item/Item.c data/item/Item.h util/Common_Libraries.h data_structures/hashtable/HashTable.c data_structures/hashtable/HashTable.h util/common_error_handling/Memory_Error_Handler.c util/common_error_handling/Memory_Error_Handler.h util/string_manipulation/StringManipulator.c util/string_manipulation/StringManipulator.h util/sqlite3/sqlite3.c util/sqlite3/sqlite3.h util/general_utilities/GeneralUtilities.c util/general_utilities/GeneralUtilities.h data/store/store.c data/store/store.h data_structures/queues/ConnectionQueue.c data_structures/queues/ConnectionQueue.h communication_protocol/CommunicationProtocol.c communication_protocol/CommunicationProtocol.h communication_protocol/ConnectionHandler.c communication_protocol/ConnectionHandler.h)
add_executable(Customer clients/customer/Customer.c clients/customer/Customer.h util/sqlite3/Sqlite3_Manager.c util/sqlite3/Sqlite3_Manager.h data/item/Item.c data/item/Item.h util/Common_Libraries.h data_structures/hashtable/HashTable.c data_structures/hashtable/HashTable.h util/common_error_handling/Memory_Error_Handler.c util/common_error_handling/Memory_Error_Handler.h util/string_manipulation/StringManipulator.c util/string_manipulation/StringManipulator.h util/sqlite3/sqlite3.c util/sqlite3/sqlite3.h util/general_utilities/GeneralUtilities.c util/general_utilities/GeneralUtilities.h data/store/store.c data/store/store.h data_structures/queues/ConnectionQueue.c data_structures/queues/ConnectionQueue.h communication_protocol/CommunicationProtocol.c communication_protocol/CommunicationProtocol.h communication_protocol/ConnectionHandler.c communication_protocol/ConnectionHandler.h)
add_executable(Server server/Server.c server/Server.h util/sqlite3/Sqlite3_Manager.c util/sqlite3/Sqlite3_Manager.h data/item/Item.c data/item/Item.h util/Common_Libraries.h data_structures/hashtable/HashTable.c data_structures/hashtable/HashTable.h util/common_error_handling/Memory_Error_Handler.c util/common_error_handling/Memory_Error_Handler.h util/string_manipulation/StringManipulator.c util/string_manipulation/StringManipulator.h util/sqlite3/sqlite3.c util/sqlite3/sqlite3.h util/general_utilities/GeneralUtilities.c util/general_utilities/GeneralUtilities.h data/store/store.c data/store/store.h data_structures/queues/ConnectionQueue.c data_structures/queues/ConnectionQueue.h communication_protocol/CommunicationProtocol.c communication_protocol/CommunicationProtocol.h communication_protocol/ConnectionHandler.c communication_protocol/ConnectionHandler.h)
add_executable(Main main.c util/sqlite3/Sqlite3_Manager.c util/sqlite3/Sqlite3_Manager.h data/item/Item.c data/item/Item.h util/Common_Libraries.h data_structures/hashtable/HashTable.c data_structures/hashtable/HashTable.h util/common_error_handling/Memory_Error_Handler.c util/common_error_handling/Memory_Error_Handler.h util/string_manipulation/StringManipulator.c util/string_manipulation/StringManipulator.h util/sqlite3/sqlite3.c util/sqlite3/sqlite3.h util/general_utilities/GeneralUtilities.c util/general_utilities/GeneralUtilities.h data/store/store.c data/store/store.h data_structures/queues/ConnectionQueue.c data_structures/queues/ConnectionQueue.h communication_protocol/CommunicationProtocol.c communication_protocol/CommunicationProtocol.h communication_protocol/ConnectionHandler.c communication_protocol/ConnectionHandler.h)